fix z-index of cdvContent

--- a/web/styles/main.css
+++ b/web/styles/main.css
@@ -501,7 +501,7 @@ table { border-collapse: collapse; }
     right: 0;
 	top:0;
 	bottom:0;
-    z-index: 100;
+    z-index: 11;
 	pointer-events: none;
 
 }
